Fixed SVG not working on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -118,7 +118,6 @@ code {
 
 .PieGraph {
   z-index: 1;
-  position: relative;
   display: flex;
   justify-content: center;
 }
